@@ -30,3 +30,7 @@
 
         * Unify event handler code
         * Always increment server event count for client events
+
+2011-02-11 Mike Blumenkrantz
+
+        * Added ecore_con_client_port_get
